--- a/zeppelin-zengine/src/main/resources/helium/package.json
+++ b/zeppelin-zengine/src/main/resources/helium/package.json
@@ -17,6 +17,7 @@ DEPENDENCIES
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.8",
     "file-loader": "^0.10.1",
-    "json-loader": "^0.5.4"
+    "json-loader": "^0.5.4",
+    DEVDEPENDENCIES
   }
 }
